--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec babel-node src/main.js",
+    "build": "nodemon --exec babel src/main.js -d build",
+    "start": "npm run build && node build/main.js"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +14,13 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.11.13"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "nodemon": "^2.0.7"
   }
 }
