--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
 PORT=5002
+REACT_APP_API_URL_GET_TABLE_PRICE="http://localhost:5001/table-price"
+REACT_APP_API_URL_POST_TABLE_PRICE="http://localhost:5001/table-price"
